# ARIA

./: .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml  start.sh
.github/workflows/: deploy-agent.yml  deploy-frontend.yml  deploy-mcp-server.yml  test.yml
agent/: .env.example  Dockerfile  requirements.txt
agent/src/: main.py
agent/src/mcp_client/: client.py  schema.py
agent/src/pipeline/: __init__.py  evidence_grader.py  graph.py  graph_builder.py  intake.py  normalize.py  phenotype_scorer.py  plan_generator.py  report_builder.py  temporal_modeler.py
agent/src/synthetic/: generator.py
agent/src/synthetic/fixtures/: medications.json  patients.json
docs/: api-reference.md  architecture.md  setup.md  sharp-integration.md  synthetic-data.md
frontend/: .env.example  Dockerfile  next.config.mjs  next.config.mjs.bak  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  fonts.ts  theme.ts  types.ts
mcp-server/: .env.example  Cargo.toml  Dockerfile
mcp-server/src/: main.rs
mcp-server/src/api/: drugbank.rs  gemini.rs  mod.rs  openfda.rs  pubmed.rs  rxnorm.rs
mcp-server/src/llm/: mod.rs  reasoning.rs
mcp-server/src/models/: drug.rs  interaction.rs  mod.rs  patient.rs  risk.rs
mcp-server/src/tools/: burden_scores.rs  check_interactions.rs  deprescribing_plan.rs  explain_mechanism.rs  fhir_patient_medications.rs  generate_report.rs  interaction_graph.rs  mod.rs  score_risk.rs  suggest_alternatives.rs  temporal_cascade.rs
(+30 files in other folders)
